pembaruan versi-model_produk,produksi

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 // PORT yang digunakan adalah 3008 sebagai backend
 PORT = 3008
 // Kode kunci yang digunakan adalah lorisx1 untuk mengamankan session dan cookies sebagai komponen prosedur keamanan pada standar JWT
-KEY = 'lorisx1';
+KEY = lorisx1
 DATABASE_URL=postgres://postgres:edwin001@localhost:5432/loris
