--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.5.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
@@ -19,9 +19,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "path": "^0.12.7",
     "session": "^0.1.0"
   },
   "devDependencies": {
