--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@
 PORT = 3008
 // Kode kunci yang digunakan adalah lorisx1 untuk mengamankan session dan cookies sebagai komponen prosedur keamanan pada standar JWT
 KEY = lorisx1
+// The number of salt rounds (adjust as needed)
+SALT = 10
 DATABASE_URL=postgres://postgres:edwin001@localhost:5432/lori
