--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,16 @@ jobs:
         eval $(ssh-agent -s)
     
     - name: Add SSH key
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+         - name: Install sshpass
       run: |
-        echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+        sudo apt-get update
+        sudo apt-get install -y sshpass
 
     - name: Deploy to CloudPanel
       env:
         SERVER_IP: ${{ secrets.SERVER_IP }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         APP_PATH: ${{ secrets.APP_PATH }}
       run: |
-        ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "cd $APP_PATH && git pull origin main && npm install && pm2 restart all"
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP "cd $APP_PATH && git pull origin main && npm install && pm2 restart all"
