--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,11 +40,23 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y sshpass
 
-    - name: Deploy to CloudPanel
+    - name: Deploy to Server
       env:
         SERVER_IP: ${{ secrets.SERVER_IP }}
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         APP_PATH: ${{ secrets.APP_PATH }}
       run: |
-        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP "cd $APP_PATH && git pull origin main && npm install && npm run build && pm2 restart all"
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          echo "Navigating to application directory..."
+          cd $APP_PATH || { echo "Directory not found"; exit 1; }
+          echo "Pulling latest changes..."
+          git pull origin main || { echo "Git pull failed"; exit 1; }
+          echo "Installing dependencies..."
+          npm install || { echo "NPM install failed"; exit 1; }
+          echo "Building project..."
+          npm run build || { echo "Build failed"; exit 1; }
+          echo "Restarting application..."
+          pm2 restart all || { echo "PM2 restart failed"; exit 1; }
+          echo "Deployment completed successfully!"
+        EOF
