--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,12 @@
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger on pull requests to the main branch
+      - main
 
 jobs:
   build:
@@ -18,23 +19,18 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'  # Specify Node.js version
+        node-version: '14'
 
     - name: Install dependencies
       run: npm install
 
-   
 
-   
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Ensure deployment only occurs after a successful build
+    needs: build
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
     - name: Install sshpass
       run: |
         sudo apt-get update
@@ -46,17 +42,29 @@ jobs:
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         APP_PATH: ${{ secrets.APP_PATH }}
+        REPO_URL: ${{ secrets.REPO_URL }}
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          if [ ! -d "$APP_PATH/.git" ]; then
+            echo "Git repository not found. Cloning repository..."
+            mkdir -p $APP_PATH
+            git clone $REPO_URL $APP_PATH
+          fi
+
           echo "Navigating to application directory..."
           cd $APP_PATH || { echo "Directory not found"; exit 1; }
+
           echo "Pulling latest changes..."
           git pull origin main || { echo "Git pull failed"; exit 1; }
+
           echo "Installing dependencies..."
           npm install || { echo "NPM install failed"; exit 1; }
+
           echo "Building project..."
           npm run build || { echo "Build failed"; exit 1; }
+
           echo "Restarting application..."
           pm2 restart all || { echo "PM2 restart failed"; exit 1; }
+
           echo "Deployment completed successfully!"
         EOF
