--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - development
   pull_request:
     branches:
       - development
@@ -24,10 +25,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-
-  deploy:
+  deploy-development:
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/development'  # This ensures deployment happens only for the development branch
 
     steps:
     - name: Install sshpass
@@ -35,12 +36,57 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y sshpass
 
-    - name: Deploy to Server
+    - name: Deploy to Development Server
       env:
-        SERVER_IP: ${{ secrets.SERVER_IP }}
+        SERVER_IP: ${{ secrets.DEV_SERVER_IP }}
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        APP_PATH: ${{ secrets.APP_PATH }}
+        APP_PATH: ${{ secrets.APP_PATH_DEV }}
+        REPO_URL: ${{ secrets.REPO_URL }}
+      run: |
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
+          echo "Checking if $APP_PATH is a Git repository..."
+
+          if [ -d "$APP_PATH/.git" ]; then
+            echo "Git repository found. Pulling latest changes..."
+            cd $APP_PATH || { echo "Failed to navigate to directory"; exit 1; }
+            git pull origin development || { echo "Git pull failed"; exit 1; }
+          else
+            echo "No Git repository found. Cloning repository..."
+            if [ -d "$APP_PATH" ]; then
+              echo "Removing existing directory..."
+              rm -rf $APP_PATH
+            fi
+            mkdir -p $APP_PATH
+            git clone $REPO_URL $APP_PATH || { echo "Git clone failed"; exit 1; }
+          fi
+
+          echo "Navigating to application directory..."
+          cd $APP_PATH || { echo "Directory not found"; exit 1; }
+
+          echo "Installing dependencies..."
+          npm install || { echo "NPM install failed"; exit 1; }
+
+          echo "Deployment to development completed successfully!"
+        EOF
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'  # This ensures deployment happens only for the main branch
+
+    steps:
+    - name: Install sshpass
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y sshpass
+
+    - name: Deploy to Production Server
+      env:
+        SERVER_IP: ${{ secrets.PROD_SERVER_IP }}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        APP_PATH: ${{ secrets.APP_PATH_PROD }}
         REPO_URL: ${{ secrets.REPO_URL }}
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
@@ -66,6 +112,5 @@ jobs:
           echo "Installing dependencies..."
           npm install || { echo "NPM install failed"; exit 1; }
 
-
-          echo "Deployment completed successfully!"
+          echo "Deployment to production completed successfully!"
         EOF
