--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
   deploy-development:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/development'  # This ensures deployment happens only for the development branch
+    if: github.ref == 'refs/heads/development'  # Deploy only on development branch
 
     steps:
     - name: Install sshpass
@@ -46,7 +46,7 @@ jobs:
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
           echo "Checking if $APP_PATH is a Git repository..."
-
+          
           if [ -d "$APP_PATH/.git" ]; then
             echo "Git repository found. Pulling latest changes..."
             cd $APP_PATH || { echo "Failed to navigate to directory"; exit 1; }
@@ -73,7 +73,7 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'  # This ensures deployment happens only for the main branch
+    if: github.ref == 'refs/heads/main'  # Deploy only on main branch
 
     steps:
     - name: Install sshpass
@@ -91,7 +91,7 @@ jobs:
       run: |
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
           echo "Checking if $APP_PATH is a Git repository..."
-
+          
           if [ -d "$APP_PATH/.git" ]; then
             echo "Git repository found. Pulling latest changes..."
             cd $APP_PATH || { echo "Failed to navigate to directory"; exit 1; }
