--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
   deploy-development:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/development'  # Deploy only on development branch
+    if: github.ref == 'refs/heads/development'
 
     steps:
     - name: Install sshpass
@@ -36,11 +36,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y sshpass
 
-    - name: Debug Environment Variables
+    - name: Check SSH Connection to Development Server
+      env:
+        SERVER_IP: ${{ secrets.DEV_SERVER_IP }}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
       run: |
-        echo "Development SERVER_IP: ${{ secrets.DEV_SERVER_IP }}"
-        echo "SSH_USERNAME: ${{ secrets.SSH_USERNAME }}"
-        echo "APP_PATH: ${{ secrets.APP_PATH_DEV }}"
+        echo "Checking SSH connection to development server..."
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 $SSH_USERNAME@$SERVER_IP "echo SSH connection successful" || { echo "SSH connection failed"; exit 1; }
 
     - name: Deploy to Development Server
       env:
@@ -79,7 +82,7 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'  # Deploy only on main branch
+    if: github.ref == 'refs/heads/main'
 
     steps:
     - name: Install sshpass
@@ -87,11 +90,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y sshpass
 
-    - name: Debug Environment Variables
+    - name: Check SSH Connection to Production Server
+      env:
+        SERVER_IP: ${{ secrets.PROD_SERVER_IP }}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
       run: |
-        echo "Production SERVER_IP: ${{ secrets.PROD_SERVER_IP }}"
-        echo "SSH_USERNAME: ${{ secrets.SSH_USERNAME }}"
-        echo "APP_PATH: ${{ secrets.APP_PATH_PROD }}"
+        echo "Checking SSH connection to production server..."
+        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 $SSH_USERNAME@$SERVER_IP "echo SSH connection successful" || { echo "SSH connection failed"; exit 1; }
 
     - name: Deploy to Production Server
       env:
