--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,41 +25,52 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-  deploy-development:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/development'
-
     steps:
     - name: Install sshpass
       run: |
         sudo apt-get update
         sudo apt-get install -y sshpass
 
-    - name: Check SSH Connection to Development Server
+    - name: Check SSH Connection
       env:
-        SERVER_IP: ${{ secrets.DEV_SERVER_IP }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
       run: |
-        echo "Checking SSH connection to development server..."
+        echo "Checking SSH connection to server..."
         sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 $SSH_USERNAME@$SERVER_IP "echo SSH connection successful" || { echo "SSH connection failed"; exit 1; }
 
-    - name: Deploy to Development Server
+    - name: Deploy to Server
       env:
-        SERVER_IP: ${{ secrets.DEV_SERVER_IP }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
         SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        APP_PATH: ${{ secrets.APP_PATH_DEV }}
+        APP_PATH: ${{ secrets.APP_PATH }}
         REPO_URL: ${{ secrets.REPO_URL }}
       run: |
+        if [ "${GITHUB_REF}" == "refs/heads/development" ]; then
+          echo "Deploying to Development Server..."
+          APP_PATH=${{ secrets.APP_PATH_DEV }}
+          git_branch="development"
+        elif [ "${GITHUB_REF}" == "refs/heads/main" ]; then
+          echo "Deploying to Production Server..."
+          APP_PATH=${{ secrets.APP_PATH_PROD }}
+          git_branch="main"
+        else
+          echo "No deployment required for branch ${GITHUB_REF}"
+          exit 0
+        fi
+        
         sshpass -p $SSH_PASSWORD ssh -tt -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
           echo "Checking if $APP_PATH is a Git repository..."
           
           if [ -d "$APP_PATH/.git" ]; then
             echo "Git repository found. Pulling latest changes..."
             cd $APP_PATH || { echo "Failed to navigate to directory"; exit 1; }
-            git pull origin development || { echo "Git pull failed"; exit 1; }
+            git pull origin $git_branch || { echo "Git pull failed"; exit 1; }
           else
             echo "No Git repository found. Cloning repository..."
             if [ -d "$APP_PATH" ]; then
@@ -76,59 +87,5 @@ jobs:
           echo "Installing dependencies..."
           npm install || { echo "NPM install failed"; exit 1; }
 
-          echo "Deployment to development completed successfully!"
-        EOF
-
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-    - name: Install sshpass
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y sshpass
-
-    - name: Check SSH Connection to Production Server
-      env:
-        SERVER_IP: ${{ secrets.PROD_SERVER_IP }}
-        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-      run: |
-        echo "Checking SSH connection to production server..."
-        sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 $SSH_USERNAME@$SERVER_IP "echo SSH connection successful" || { echo "SSH connection failed"; exit 1; }
-
-    - name: Deploy to Production Server
-      env:
-        SERVER_IP: ${{ secrets.PROD_SERVER_IP }}
-        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-        APP_PATH: ${{ secrets.APP_PATH_PROD }}
-        REPO_URL: ${{ secrets.REPO_URL }}
-      run: |
-        sshpass -p $SSH_PASSWORD ssh -tt -o StrictHostKeyChecking=no $SSH_USERNAME@$SERVER_IP <<EOF
-          echo "Checking if $APP_PATH is a Git repository..."
-          
-          if [ -d "$APP_PATH/.git" ]; then
-            echo "Git repository found. Pulling latest changes..."
-            cd $APP_PATH || { echo "Failed to navigate to directory"; exit 1; }
-            git pull origin main || { echo "Git pull failed"; exit 1; }
-          else
-            echo "No Git repository found. Cloning repository..."
-            if [ -d "$APP_PATH" ]; then
-              echo "Removing existing directory..."
-              rm -rf $APP_PATH
-            fi
-            mkdir -p $APP_PATH
-            git clone $REPO_URL $APP_PATH || { echo "Git clone failed"; exit 1; }
-          fi
-
-          echo "Navigating to application directory..."
-          cd $APP_PATH || { echo "Directory not found"; exit 1; }
-
-          echo "Installing dependencies..."
-          npm install || { echo "NPM install failed"; exit 1; }
-
-          echo "Deployment to production completed successfully!"
+          echo "Deployment completed successfully!"
         EOF
